# estructura-de-datos-i-q3-2025

./: .gitignore  readme.md
repaso-LinkedList/: CMakeLists.txt  linkedlist.cpp  linkedlist.h  main.cpp  node.cpp  node.h
s1/LinkedListGrapher/: CMakeLists.txt  CMakeLists.txt.user.c270a93  linkedlist.cpp  linkedlist.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  node.cpp  node.h  nodeitem.cpp  nodeitem.h
s1/simpleLinkedList/: CMakeLists.txt  CMakeLists.txt.user.c270a93  linkedlist.cpp  linkedlist.h  main.cpp  node.cpp  node.h
s3/DoubleLinkedList/: CMakeLists.txt  dllnode.cpp  dllnode.h  doublelinkedlist.cpp  doublelinkedlist.h  main.cpp
s3/stack/: CMakeLists.txt  main.cpp  stack.cpp  stack.h  stacknode.cpp  stacknode.h
s6/BST/: CMakeLists.txt  binarysearchtree.cpp  binarysearchtree.h  main.cpp  treenode.cpp  treenode.h
s7/AVL/: CMakeLists.txt  avltree.cpp  avltree.h  avltreenode.cpp  avltreenode.h
